[project]
name = "rouge-score-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "pdfplumber>=0.11.8",
    "pythainlp>=5.1.2",
    "rouge-score>=0.1.2",
    "sentence-transformers>=3.4.1",
]
